# Face_Detector.Cpp

./: .gitignore  404.html  CMakeLists.txt  README.md  colcon.pkg  index.html  mkdocs.yml  package.xml
.github/workflows/: code_compiles.yml  mkdocs.yml  ros2_code_compiles.yml
about/implementation/: index.html
bindings/ros2/: camera_node.cpp  face_detector_node.cpp  set_ld_path.sh
contributing/license/: index.html
contributing/rules/: index.html
docs/: index.md
docs/about/: implementation.md
docs/assets/stylesheets/: logo.css
docs/contributing/: license.md  rules.md
docs/usage/: ROS_demo.md  face_roi_demo.md  overview.md  usage_with_linux.md  usage_with_mac.md  usage_with_windows.md
docs/usage/build_environment/: usage_with_linux.md  usage_with_mac.md  usage_with_windows.md
docs/usage/ros2_build_environment/: usage_with_linux.md
docs/usage/tpu/: overview.md  using_a_tpu_on_arm64_linux.md  using_a_tpu_on_x86_64_linux.md  using_a_tpu_on_x86_64_windows.md
example/Get_Face_Roi/: demo.cpp
example/ROS_demo/: camera_node.cpp  face_detector_viewer.cpp  viewer.cpp
example/face_roi_ROS_demo/: demo.cpp
example/face_roi_demo/: demo.cpp
search/: search_index.json
src/: face_detection.cpp  face_detection.hpp
tmp/: ros notes.txt
usage/ROS_demo/: index.html
usage/build_environment/usage_with_linux/: index.html
usage/build_environment/usage_with_mac/: index.html
usage/build_environment/usage_with_windows/: index.html
usage/face_roi_demo/: index.html
usage/overview/: index.html
usage/ros2_build_environment/usage_with_linux/: index.html
usage/tpu/overview/: index.html
usage/tpu/using_a_tpu_on_arm64_linux/: index.html
usage/tpu/using_a_tpu_on_x86_64_linux/: index.html
usage/tpu/using_a_tpu_on_x86_64_windows/: index.html
