<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>face_detector</name>
  <version>3.11.5</version>
  <description>
  Face detector using the [BlazeFace Mediapipe model](https://storage.googleapis.com/mediapipe-assets/MediaPipe%20BlazeFace%20Model%20Card%20(Short%20Range).pdf) (with both CPU and TPU delegates) written in C++;
    - Plain C/C++ implementation with minimal dependencies (Tensorflow Lite + OpenCV)
    - Google MediaPipe models without the Mediapipe framework
    - Support for Coral Edge TPU
    - Runs on ARM as well (Tested on RPI 3,4 and 5)
  </description>
  <maintainer email="jveen1@gmail.com">jeroen</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>


</package>

